framec_tests/language_specific/rust/v3_mir/positive/forward_with_parent_mixed.frm
@target rust

system S {
    machine:
        $P {
        }
        $A => $P {
            e() {
                => $^
            }
        }
        $B {
        }
}

