framec_tests/language_specific/rust/v3_mir/negative/missing_dollar.frm
@target rust

system S {
    machine:
        $A {
            e() {
                -> $ (1)
            }
        }
}
